--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "target": "es6",
-    "module": "amd",
+//    "module": "amd",
     "lib": [
       "esnext",
       "dom"
