--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@types/pg": "^7.14.9",
     "abortcontroller-polyfill": "^1.7.1",
     "ant-design-vue": "^1.7.2",
+    "aws-sdk": "^2.834.0",
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
+    "dns": "^0.2.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "intersects": "^2.7.2",
@@ -31,6 +33,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
+    "pg-native": "^3.0.0",
     "serve-static": "^1.14.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
