--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "postinstall": "if test \"$NODE_ENV\" = \"production\" ; then npm run build ; fi ",
-    "start": "cd src/server && node start"
+    "start": "cd src/server && npm start"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
@@ -23,8 +23,8 @@
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "dns": "^0.2.2",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "dotenv": "8.2.0",
+    "express": "4.17.1",
     "intersects": "^2.7.2",
     "jsonwebtoken": "^8.5.1",
     "make-runnable": "^1.3.8",
