--- a/src/server/package.json
+++ b/src/server/package.json
@@ -4,10 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "postinstall": "tsc",
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "0.19.2",
+    "dotenv": "8.2.0",
     "express": "4.17.1"
+  },
+  "devDependencies": {
+    "typescript": "3.9.3"
   }
 }
