--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build && (cd scr/server && npm install)",
     "lint": "vue-cli-service lint",
     "postinstall": "npm run build",
     "start": "cd src/server && npm start"
