--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "postinstall": "npm run build",
-    "start": "cd src/server && npm start"
+    "heroku-postbuild": "cd src/server && ./build.sh",
+    "start": "npm run serve"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
