--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "postinstall": "npm run build",
-    "heroku-postbuild": "cd src/server && ./build.sh",
+    "heroku-postbuild": "cd src/server && bash build.sh",
     "start": "npm run serve"
   },
   "dependencies": {
