--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint",
     "postinstall": "npm run build",
     "heroku-postbuild": "cd src/server && bash build.sh",
-    "start": "npm run serve"
+    "start": "cd src/server && node server.js"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
