--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "postinstall": "npm run build",
-    "heroku-postbuild": "cd src/server && bash build.sh",
-    "start": "cd src/server && node server.js"
+    "postinstall": "tsc && npm run build",
+    "start": "node server.js"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
