--- a/src/server/package.json
+++ b/src/server/package.json
@@ -4,13 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "postinstall": "npm install && tsc"
+    "build": "tsc",
+    "start": "cd"
   },
   "dependencies": {
     "dotenv": "8.2.0",
-    "express": "4.17.1"
-  },
-  "devDependencies": {
+    "express": "4.17.1",
     "typescript": "3.9.3"
   }
 }
