--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "postinstall": "tsc && npm run build",
+    "postinstall": "npm insatll express && tsc && npm run build",
     "start": "node server.js"
   },
   "dependencies": {
