--- a/package.json
+++ b/package.json
@@ -10,36 +10,34 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.12.1",
-    "@types/bcrypt": "^3.0.0",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/pg": "^7.14.9",
-    "abortcontroller-polyfill": "^1.7.1",
-    "ant-design-vue": "^1.7.2",
-    "aws-sdk": "^2.834.0",
-    "bcrypt": "^5.0.0",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "core-js": "^3.6.5",
-    "cors": "^2.8.5",
-    "dns": "^0.2.2",
+    "@babel/polyfill": "7.12.1",
+    "@types/bcrypt": "3.0.0",
+    "@types/jsonwebtoken": "8.5.0",
+    "@types/pg": "7.14.9",
+    "abortcontroller-polyfill": "1.7.1",
+    "ant-design-vue": "1.7.2",
+    "aws-sdk": "2.834.0",
+    "bcrypt": "5.0.0",
+    "bcryptjs": "2.4.3",
+    "body-parser": "1.19.0",
+    "core-js": "3.8.2",
+    "cors": "2.8.5",
+    "dns": "0.2.2",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "intersects": "^2.7.2",
-    "jsonwebtoken": "^8.5.1",
-    "make-runnable": "^1.3.8",
-    "moment": "^2.29.1",
-    "npm-run-all": "^4.1.5",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
-    "pg": "^8.5.1",
-    "pg-native": "^3.0.0",
-    "serve-static": "^1.14.1",
-    "vue": "^2.6.11",
-    "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^9.1.2",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "jsonwebtoken": "8.5.1",
+    "make-runnable": "1.3.8",
+    "moment": "2.29.1",
+    "pg": "8.5.1",
+    "pg-native": "3.0.0",
+    "serve-static": "1.14.1",
+    "typescript": "3.9.7",
+    "vue": "2.6.12",
+    "vue-class-component": "7.2.6",
+    "vue-property-decorator": "9.1.2",
+    "vue-router": "3.4.9",
+    "vuex": "3.6.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.21",
@@ -62,7 +60,6 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
-    "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
