--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "same-circle-packing",
+  "name": "Расчет формы батареи велосипеда - Radio-technika.ru",
   "version": "0.1.0",
   "private": true,
   "scripts": {
