--- a/package.json
+++ b/package.json
@@ -1,85 +1,41 @@
 {
-  "name": "radio-technika",
-  "version": "0.1.0",
+  "name": "uno-soft",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "postinstall": "tsc && npm run build",
-    "start": "node server.js"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@babel/polyfill": "7.12.1",
-    "@types/bcrypt": "3.0.0",
-    "@types/jsonwebtoken": "8.5.0",
-    "@types/pg": "7.14.9",
-    "abortcontroller-polyfill": "1.7.1",
     "ant-design-vue": "1.7.2",
-    "aws-sdk": "2.834.0",
-    "bcrypt": "5.0.0",
-    "bcryptjs": "2.4.3",
     "body-parser": "1.19.0",
-    "core-js": "3.8.2",
-    "cors": "2.8.5",
-    "dns": "0.2.2",
-    "dotenv": "8.2.0",
-    "express": "4.17.1",
-    "intersects": "^2.7.2",
-    "jsonwebtoken": "8.5.1",
+    "core-js": "3.26.0",
+    "express": "^4.18.2",
+    "intersects": "2.7.2",
     "make-runnable": "1.3.8",
     "moment": "2.29.1",
-    "pg": "8.5.1",
-    "pg-native": "3.0.0",
-    "serve-static": "1.14.1",
-    "typescript": "3.9.7",
+    "typescript": "4.1.6",
     "vue": "2.6.12",
     "vue-class-component": "7.2.6",
     "vue-property-decorator": "9.1.2",
     "vue-router": "3.4.9",
+    "vue-template-compiler": "2.6.12",
     "vuex": "3.6.0"
   },
   "devDependencies": {
-    "@types/node": "^14.14.21",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/eslint-config-airbnb": "^5.0.2",
-    "@vue/eslint-config-typescript": "^5.0.2",
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "babel-watch": "^7.3.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "@vue/airbnb",
-      "@vue/typescript/recommended"
-    ],
-    "parserOptions": {
-      "ecmaVersion": 2020
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    "@types/node": "14",
+    "@vue/cli-plugin-babel": "4.5.0",
+    "@vue/cli-plugin-router": "4.5.0",
+    "@vue/cli-plugin-typescript": "4.5.0",
+    "@vue/cli-plugin-vuex": "4.5.0",
+    "@vue/cli-service": "4.5.0",
+    "babel-cli": "6.18.0",
+    "babel-core": "6.26.3",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-register": "6.26.0",
+    "babel-watch": "7.3.0"
+  }
 }
