--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,15 +7,17 @@
       "esnext",
       "dom"
     ],
-    "strict": true,
     "sourceMap": false,
     "declaration": false,
     "noImplicitAny": false,
     "noImplicitThis": true,
+    "skipDefaultLibCheck": true,
+    "skipLibCheck": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "resolveJsonModule": true,
+    "outDir": "./dist",
     "suppressImplicitAnyIndexErrors": false,
     "typeRoots": [
       "node_modules/@types",
@@ -30,6 +32,7 @@
   },
   "include": [
     "src/**/*.ts",
+    "./server.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
